fix: retour pr, suppression du z-index

--- a/styles/components/Layouts.module.css
+++ b/styles/components/Layouts.module.css
@@ -40,7 +40,6 @@
 .chatRoom {
   position: fixed;
   right: 0;
-  z-index: 5;
   height: 100%;
   width: 450px;
   margin-left: auto;
